--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
 <body style="font-family: monospace">
     <div class="d-flex flex-column align-items-center" style="text-align:center">
-        <header class="border border-success" style="margin:20px">
+        <header class="text-bg-primary border border-5 border-dark rounded p-4 m-4" style="margin:20px">
             <h1 class="display-1" style="text-align: center;">Page Timings</h1>
         </header>
         <div>
-            <p><em>Show Title</em></p>
+            <p><i>Show Title</i></p>
+            
             <p>we put good things in here</p>
             <div>
                 <div>
@@ -29,16 +30,17 @@
                 </div>
             </div>
             <div>
-                <button type="submit" class="btn btn-success"><i class="bi bi-watch"></i>Start Timer</button>
-                <button type="submit" class="btn btn-danger"><i class="bi bi-watch"></i>Stop Timer</button>
-                <button type="reset" class="btn btn-secondary">Reset</button>
-                <button type="submit" class="btn btn-dark">Export</button>
+                <button type="submit" class="btn btn-outline-success">Start Timer</button>
+                <button type="submit" class="btn btn-outline-danger">Stop Timer</button>
+                <button type="reset" class="btn btn-outline-primary">Reset</button>
+                <button type="submit" class="btn btn-outline-dark">Export</button>
+                <button type="submit" class="btn btn-outline-secondary">Change Show</button>
             </div>
         </div>
-        <div style="margin-top: 20px;">
+        <div class= "m-4">
             <table class="table table-light table-bordered">
                 <thead>
-                    <tr>
+                    <tr class="table-dark">
                         <th>Page</th>
                         <th>TimeStamp</th>
                         <th>Duration</th>
@@ -50,16 +52,19 @@
                         <td>Data2</td>
                         <td>Data3</td>
                     </tr>
-                    <tr>
+                    <tr class="table-primary">
                         <td>Data4</td>
                         <td>Data5</td>
                         <td>Data6</td>
                     </tr>
+                </tbody>
             </table>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
+        <script src="./assets/js/logic.js"></script>
+        <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
