Added JS stopwatch

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                     <p>Current Page</p>
                 </div>
                 <div>
-                    <h2> 00.00.00</h2>
+                    <h2 id="stopwatch">00.00.00</h2>
                     <p>Time Stamp</p>
                 </div>
             </div>
             <div>
-                <button type="submit" class="btn btn-outline-success">Start Timer</button>
-                <button type="submit" class="btn btn-outline-danger">Stop Timer</button>
-                <button type="reset" class="btn btn-outline-primary">Reset</button>
+                <button type="submit" class="btn btn-outline-success" id="start">Start Timer</button>
+                <button type="submit" class="btn btn-outline-danger" id="stop">Stop Timer</button>
+                <button type="reset" class="btn btn-outline-primary" id="reset">Reset</button>
                 <button type="submit" class="btn btn-outline-dark">Export</button>
                 <button type="submit" class="btn btn-outline-secondary">Change Show</button>
             </div>
@@ -65,6 +65,7 @@
             crossorigin="anonymous"></script>
         <script src="./assets/js/logic.js"></script>
         <script src="./assets/js/script.js"></script>
+        <script src="./assets/js/stopwatch.js"></script>
 </body>
 
 </html>
