--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <p>Current Page</p>
                 </div>
                 <div>
-                    <h2 id="stopwatch">00.00.00</h2>
+                    <h2 id="stopwatch">00:00:00</h2>
                     <p>Time Stamp</p>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                 <button type="submit" class="btn btn-outline-danger" id="stop">Stop Timer</button>
                 <button type="reset" class="btn btn-outline-primary" id="reset">Reset</button>
                 <button type="submit" class="btn btn-outline-dark">Export</button>
-                <button type="submit" class="btn btn-outline-secondary">Change Show</button>
+                <button type="submit" class="btn btn-outline-secondary" id="back-button">Change Show</button>
             </div>
         </div>
         <div class= "m-4">
@@ -66,6 +66,7 @@
         <script src="./assets/js/logic.js"></script>
         <script src="./assets/js/script.js"></script>
         <script src="./assets/js/stopwatch.js"></script>
+        <script src="./assets/js/redirect.js"></script>
 </body>
 
 </html>
