--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 
 </head>
 
-<body style="font-family: monospace">
+<body style="font-family: monospace" class="bg-info-subtle">
     <div class="d-flex flex-column align-items-center" style="text-align:center">
         <header class="text-bg-primary border border-5 border-dark rounded p-4 m-4" style="margin:20px">
             <h1 class="display-1" style="text-align: center;">Page Timings</h1>
         </header>
         <div>
-            <p><i>Show Title</i></p>
+            <i><p id="show-title-output">Show Title</p></i>
             
-            <p>we put good things in here</p>
+            <p>Please use the spacebar to move to the next page.</p>
             <div>
                 <div>
-                    <h2> 0 </h2>
+                    <h2 id="current-page"> 0 </h2>
                     <p>Current Page</p>
                 </div>
                 <div>
@@ -38,15 +38,15 @@
             </div>
         </div>
         <div class= "m-4">
-            <table class="table table-light table-bordered">
+            <table class="table table-light table-bordered" >
                 <thead>
                     <tr class="table-dark">
-                        <th>Page</th>
-                        <th>TimeStamp</th>
-                        <th>Duration</th>
+                        <th>Page Number</th>
+                        <th>Time Stamp</th>
+                        <th>Page Time</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="table-container">
                     <tr>
                         <td>Data1</td>
                         <td>Data2</td>
@@ -63,10 +63,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
-        <script src="./assets/js/logic.js"></script>
-        <script src="./assets/js/script.js"></script>
+        <script src="./assets/js/index-script.js"></script>
         <script src="./assets/js/stopwatch.js"></script>
-        <script src="./assets/js/redirect.js"></script>
 </body>
 
 </html>
