--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
             <h1 class="display-1" style="text-align: center;">Page Timings</h1>
         </header>
         <div>
-            <i><p id="show-title-output">Show Title</p></i>
+            <i><p class="fs-1 text-bg-primary border border-5 border-dark rounded"id="show-title-output">Show Title</p></i>
             
             <p>Please use the spacebar to move to the next page.</p>
             <div>
                 <div>
                     <h2 id="current-page"> 0 </h2>
-                    <p>Current Page</p>
+                    <p class="fs-5">Current Page</p>
                 </div>
                 <div>
                     <h2 id="stopwatch">00:00:00</h2>
-                    <p>Time Stamp</p>
+                    <p class="fs-5">Time Stamp</p>
                 </div>
             </div>
             <div>
                 <button type="submit" class="btn btn-outline-success" id="start">Start Timer</button>
                 <button type="submit" class="btn btn-outline-danger" id="stop">Stop Timer</button>
-                <button type="reset" class="btn btn-outline-primary" id="reset">Reset</button>
-                <button type="submit" class="btn btn-outline-dark">Export</button>
+                <!-- <button type="reset" class="btn btn-outline-primary" id="reset">Reset</button> -->
+                <!-- <button type="submit" class="btn btn-outline-dark" id="export">Export</button> -->
                 <button type="submit" class="btn btn-outline-secondary" id="back-button">Change Show</button>
             </div>
         </div>
@@ -43,11 +43,11 @@
                     <tr class="table-dark">
                         <th>Page Number</th>
                         <th>Time Stamp</th>
-                        <th>Page Time</th>
+                        <!-- <th>Page Time</th> -->
                     </tr>
                 </thead>
                 <tbody id="table-container">
-                    <tr>
+                    <!-- <tr>
                         <td>Data1</td>
                         <td>Data2</td>
                         <td>Data3</td>
@@ -56,15 +56,15 @@
                         <td>Data4</td>
                         <td>Data5</td>
                         <td>Data6</td>
-                    </tr>
+                    </tr> -->
                 </tbody>
             </table>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
-        <script src="./assets/js/index-script.js"></script>
-        <script src="./assets/js/stopwatch.js"></script>
+        <script src="./assets/js/index-script-test.js"></script>
+        
 </body>
 
 </html>
