--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <div>
             <i><p class="fs-1 text-bg-primary border border-5 border-dark rounded"id="show-title-output">Show Title</p></i>
             
-            <p>Please use the spacebar to move to the next page.</p>
             <div>
                 <div>
                     <h2 id="current-page"> 0 </h2>
@@ -36,8 +35,9 @@
                 <!-- <button type="submit" class="btn btn-outline-dark" id="export">Export</button> -->
                 <button type="submit" class="btn btn-outline-secondary" id="back-button">Change Show</button>
             </div>
+            <p class="p-3">Please use the spacebar to move to the next page.</p>
         </div>
-        <div class= "m-4">
+        <div>
             <table class="table table-light table-bordered" >
                 <thead>
                     <tr class="table-dark">
