--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Timings</title>
+    <title>Page Timings Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -16,55 +16,45 @@
             <h1 class="display-1" style="text-align: center;">Page Timings</h1>
         </header>
         <div>
-            <i><p class="fs-1 text-bg-primary border border-5 border-dark rounded"id="show-title-output">Show Title</p></i>
-            
-            <div>
-                <div>
-                    <h2 id="current-page"> 0 </h2>
-                    <p class="fs-5">Current Page</p>
+            <h3>Please select the show title</h3>
+
+            <div id="landing">
+                <div class="m-2">
+                    <input type="text" id="user-input" name="show-title" placeholder="Enter Show Title" size="40">
+                    <button type="submit" id="submit" class="btn btn-outline-secondary">Submit</button>
                 </div>
-                <div>
-                    <h2 id="stopwatch">00:00:00</h2>
-                    <p class="fs-5">Time Stamp</p>
+                <p class="text-danger d-none" id="error">*** Please fill in the field ***</p>
+                <div id="buttons">
+                    <!-- <button type="submit" class="btn btn-outline-primary m-2">Show 1</button>
+                    <button type="submit" class="btn btn-outline-dark m-2">Show 2</button>
+                    <button type="submit" class="btn btn-outline-primary m-2">Show 3</button>
+                    <button type="submit" class="btn btn-outline-dark m-2">Show 4</button> -->
                 </div>
             </div>
-            <div>
-                <button type="submit" class="btn btn-outline-success" id="start">Start Timer</button>
-                <button type="submit" class="btn btn-outline-danger" id="stop">Stop Timer</button>
-                <!-- <button type="reset" class="btn btn-outline-primary" id="reset">Reset</button> -->
-                <!-- <button type="submit" class="btn btn-outline-dark" id="export">Export</button> -->
-                <button type="submit" class="btn btn-outline-secondary" id="back-button">Change Show</button>
-            </div>
-            <p class="p-3">Please use the spacebar to move to the next page.</p>
         </div>
-        <div>
-            <table class="table table-light table-bordered" >
-                <thead>
-                    <tr class="table-dark">
-                        <th>Page Number</th>
-                        <th>Time Stamp</th>
-                        <!-- <th>Page Time</th> -->
-                    </tr>
-                </thead>
-                <tbody id="table-container">
-                    <!-- <tr>
-                        <td>Data1</td>
-                        <td>Data2</td>
-                        <td>Data3</td>
-                    </tr>
-                    <tr class="table-primary">
-                        <td>Data4</td>
-                        <td>Data5</td>
-                        <td>Data6</td>
-                    </tr> -->
-                </tbody>
-            </table>
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Please Confirm Your Selection</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body" id="modal-id-value">
+                        <p>
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" id="modal-id-cancel"
+                            data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-success" id="modal-id-confirm">Confirm</button>
+                    </div>
+                </div>
+            </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
         <script src="./assets/js/index-script.js"></script>
-        
 </body>
 
 </html>
